RESOLVED FIXED145976
[Streams API] Calling controller.error() should trigger storing an undefined error
https://bugs.webkit.org/show_bug.cgi?id=145976
Summary [Streams API] Calling controller.error() should trigger storing an undefined ...
youenn fablet
Reported 2015-06-15 09:19:25 PDT
Currently, when error() has no parameter, we create a default error. We should just store a jsUndefined() value.
Attachments
Patch (7.43 KB, patch)
2015-06-15 23:56 PDT, youenn fablet
no flags
youenn fablet
Comment 1 2015-06-15 23:56:08 PDT
WebKit Commit Bot
Comment 2 2015-06-16 10:36:48 PDT
Comment on attachment 254940 [details] Patch Clearing flags on attachment: 254940 Committed r185592: <http://trac.webkit.org/changeset/185592>
WebKit Commit Bot
Comment 3 2015-06-16 10:36:53 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.